[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-test"
version = "0.1.1"
description = "API Test."
authors = [
    {name = "Taizo Munemura"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "python-multipart",
    "uvicorn[standard]",
    "gunicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]
docs = [
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["api_test*"]
